# market_data_service

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: markets.real-smoke-1d.toml  markets.real-smoke-1h-4h-1d.toml  markets.real-smoke-4h-1d.toml  markets.toml
docs/: acceptance-test-matrix.md  architecture.md  bybit-rest-adapter.md  consumer-read-api-v1.md  consumer-readiness-contract.md  database-schema-v1.md  decimal-policy.md  instrument-stream-semantics.md  master-plan.md  multi-symbol-model.md  operational-scenarios.md  ported-semantics.md  sequential-backfill.md  source-reuse-audit.md  sqlite-vertical-slice.md  stream-state-machine.md
scripts/: benchmark_consumer_read_serialization.py
tests/: fake_bybit_api.py  test_acceptance_matrix.py  test_architecture_baseline.py  test_architecture_decision_records.py  test_audit_continuity.py  test_backfill_stream_history.py  test_bybit_rest_adapter.py  test_consumer_read_application.py  test_consumer_read_architecture.py  test_consumer_read_http.py  test_consumer_read_sqlite_integration.py  test_consumer_readiness_contract.py  test_database_schema_v1.py  test_decimal_policy.py  test_fake_bybit_multi_stream_matrix.py  test_fake_bybit_pipeline_matrix.py  test_fake_bybit_websocket_ingestion.py  test_fake_realtime_recovery_matrix.py  test_full_history_bootstrap.py  test_instrument_stream_semantics.py  test_market_config_example.py  test_market_metadata_validation.py  test_multi_stream_backfill.py  test_package_baseline.py  test_repair_gaps.py  (+23 more)
(+201 files in other folders)
